fix polygon on small screens

--- a/src/app/containers/home/home.component.scss
+++ b/src/app/containers/home/home.component.scss
@@ -38,6 +38,9 @@
     .main {
         height: calc(100vh - 5rem);
     }
+    .polygon-wrap-1 {
+        height: 10rem;
+    }
 }
 
 @media only screen and (min-width: 600px) {
